CRUD for teams done
